syntax = "proto3";

package mangahub;

option go_package = "mangahub/internal/grpc/pb;pb";

service MangaService {
  rpc GetUserProgress (UserRequest) returns (ProgressResponse);
}

message UserRequest {
  string user_id = 1;
}

message Progress {
  string manga_id = 1;
  int32 current_chapter = 2;
  string status = 3;
}

message ProgressResponse {
  repeated Progress progress = 1;
}
